@@ -1,7 +1,11 @@
 package org.javaacademy.module2.homework.homework4.ex1;
 
 import java.util.List;
+import java.util.Set;
+import java.util.StringJoiner;
 import java.util.concurrent.atomic.AtomicInteger;
+import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
 /**Задание №1 - Список спец номеров
@@ -17,14 +21,23 @@ import java.util.stream.Stream;
 "a040ан1799, a041ан799, ... , k048се178, k049се178"*/
 public class Runner {
     public static void main(String[] args) {
-        AtomicInteger counter = new AtomicInteger(000);
-        List<Car> plateNumbers1 = Stream.generate(() -> new Car("а"+counter.addAndGet(1)+"ан799"))
-                .limit(50)
-                .toList();
-        List<Car> plateNumbers2 = Stream.generate(() -> new Car("к"+counter.addAndGet(1)+"се799"))
-                .limit(50)
-                .toList();
-        Stream.concat(plateNumbers1.stream(), plateNumbers2.stream()).forEach(e -> System.out.println(e));
+        List<Car> cars1 = Stream
+                .iterate(1, i -> i <= 50, i -> i + 1)
+                .map(i -> new Car("а0" + String.format("%02d", i) + "ан799"))
+                .collect(Collectors.toList());
+        System.out.println(cars1);
 
+        List<Car> cars2 = Stream
+                .iterate(1, i -> i <= 50, i -> i + 1)
+                .map(i -> new Car("к0" + String.format("%02d", i) + "се178"))
+                .collect(Collectors.toList());
+        System.out.println(cars2);
+
+        String numbersSpecialCars = Stream.concat(cars1.stream(), cars2.stream())
+                .filter(car -> car.getLicensePlateNumber().matches(".*04[0-9].*"))
+                .map(Car::getLicensePlateNumber)
+                .collect(Collectors.joining(", "));
+
+        System.out.println(numbersSpecialCars);
     }
 }
